--- a/Platformer Game/Platformer Game.csproj
+++ b/Platformer Game/Platformer Game.csproj
@@ -45,14 +45,20 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Form1.cs">
+    <Compile Include="Collision_Engine.cs" />
+    <Compile Include="Gravity_Engine.cs" />
+    <Compile Include="PlatformerGame_InGame_Form.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="PlatformerGame_InGame_Form.Designer.cs">
+      <DependentUpon>PlatformerGame_InGame_Form.cs</DependentUpon>
     </Compile>
+    <Compile Include="Player_Engine.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="PlatformerGame_InGame_Form.resx">
+      <DependentUpon>PlatformerGame_InGame_Form.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
